network: Find connections specific MAC address set

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=677899

Signed-off-by: Richard Hughes <richard@hughsie.com>